# exjobb

./: .gitignore  Procfile  app.py  connect_db.py  dataloader.py  dummy_model.py  dummy_model_2.py  dummy_model_3.py  main.py  preprocessing.py  preprocessing_ht.py  preprocessing_it.py  preprocessing_md.py  pyproject.toml  requirements.txt
Trashcan/: dummy_model.py
src/: app.py  connect_db.py  dataloader.py  dummy_model_3.py  initial_linear_regression.py  linear_regression.py  llm_score_vs_own_ms.py  milestone_analysis.py  pca_analysis.py  pilot_analysis.py  prompting.py  random_forest_shap.py  second_migration.py  statistical_analysis.py
src/DimensionalityReduction/: pca_analysis.py  plot_trajectories.py  tSNE_UMAP.py
src/FreeText/: llm_motorscore_analysis.py  llm_motorscore_regression.py  story_analysis.py
src/LinearAnalysis/: initial_linear_regression.py  linear_regression.py  no0_initial_linear_regression.py  no0_linear_regression.py
src/StatisticalAnalysis/: plot_trajectories.py  statistical_analysis.py
src/dimensionality_reduction/: pca_analysis.py  plot_training_tables.py  plot_trajectories.py  tsne_umap.py
src/linear_analysis/: dose_response.py  dose_response_filtered.py  model_comparison.py  model_comparison_filtered.py
src/llm_analysis/: llm_motorscore_analysis.py  llm_motorscore_regression.py  llm_overall_analysis.py  motorscore_analysis.py  story_analysis.py
src/migrations/: database_reorganization.py
src/preprocessing/: home_training.py  intensive_therapies.py  master_preprocessing.py  matilda.py  (+7 more)
survey-dashboard/: connect_db.py
(+6 files in other folders)
