[project]
name = "exjobb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "shap>=0.50",
    "statsmodels>=0.14.6",
    "streamlit>=1.54.0",
]
